working on project

--- a/project.ipynb
+++ b/project.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,23 +20,36 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "from matplotlib.ticker import AutoMinorLocator\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import csv\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "cork_airport_csv = \"./data/cork_airport_weather_hourly.csv\"\n",
     "\n",
-    "cork_airport_df = pd.read_csv(cork_airport_csv, skiprows=23, index_col=\"date\", usecols=[\"date\", \"rain\", \"temp\", \"wdsp\"], low_memory=False)"
+    "def skiprows():\n",
+    "    \n",
+    "    pattern = \"^date(?!:)\"\n",
+    "    \n",
+    "    with open(cork_airport_csv) as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        for row_number, row in enumerate(reader, start=0):\n",
+    "           if any(re.search(pattern, string) for string in row):\n",
+    "              break\n",
+    "    return row_number\n",
+    "\n",
+    "cork_airport_df = pd.read_csv(cork_airport_csv, skiprows=skiprows(), index_col=\"date\", usecols=[\"date\", \"rain\", \"temp\", \"wdsp\"], low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +129,7 @@
        "01-jan-1962 05:00       -2.1    11"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +381,7 @@
        "[756 rows x 4 columns]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
