README file, requirements file and images.

--- a/project.ipynb
+++ b/project.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
       "Oct: 9.38\n",
       "Nov: 9.62\n",
       "Dec: 10.89\n",
-      "Model score: 0.36003955363286666\n"
+      "Model score: 0.36\n"
      ]
     },
     {
@@ -1130,7 +1130,7 @@
     "    print(f'{month}: {wdsp:.2f}')\n",
     "\n",
     "# Print the model score.\n",
-    "print(f'Model score: {model.score(x, y)}')\n",
+    "print(f'Model score: {model.score(x, y):.2f}')\n",
     "\n",
     "# Create a dataframe for the 2025 wind speed.\n",
     "fut_wind = pd.DataFrame({\n",
